--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-thunk": "^1.0.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "rxjs": "^7.5.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
